# robotpkg

./: .gitignore  Makefile  README  README-release  README.html  README.txt  import-pkgsrc.sh  pal-license
architecture/: Makefile
architecture/ace/: Makefile  PLIST  depend.mk  distinfo
architecture/genBasic-genom/: Makefile  PLIST  depend.mk  distinfo
architecture/genHum-genom/: Makefile  depend.mk  distinfo
architecture/genPos-genom/: Makefile  PLIST  depend.mk  distinfo
architecture/genom/: DESCR  MESSAGE  Makefile  PLIST  PLIST.module  depend.mk  distinfo
architecture/genom-openhrp-plugin/: MESSAGE  Makefile  PLIST  depend.mk  distinfo
architecture/genom3/: DESCR  Makefile  PLIST  PLIST.templates  depend.mk  distinfo  module.mk
architecture/genom3-pocolibs/: DESCR  Makefile  PLIST  depend.mk  distinfo
architecture/genom3-ros/: DESCR  Makefile  PLIST  depend.mk  distinfo
architecture/netshring/: Makefile  depend.mk
architecture/openhrp/: Makefile  depend.mk  distinfo
architecture/openhrp-jrl/: DESCR  Makefile  depend.mk  distinfo
architecture/openprs/: Makefile  PLIST  depend.mk  distinfo
architecture/openrtm-aist/: Makefile  PLIST  depend.mk  distinfo
architecture/orocos-ocl/: DESCR  Makefile  PLIST  depend.mk  distinfo
architecture/orocos-rtt/: Makefile  PLIST  depend.mk  distinfo
architecture/robotis-oroyarp/: Makefile  depend.mk
architecture/transgen/: Makefile  depend.mk
architecture/urbi/: Makefile  PLIST
architecture/yarp/: Makefile  PLIST  depend.mk  distinfo
archivers/: Makefile
archivers/bzip2/: Makefile  depend.mk
archivers/libarchive/: Makefile  PLIST  depend.mk
archivers/lz4/: DESCR  Makefile  PLIST  depend.mk  distinfo
archivers/pax/: Makefile  PLIST  depend.mk
archivers/zlib/: Makefile  depend.mk
audio/: Makefile
audio/OGIlexicon/: Makefile  depend.mk
audio/clone-genom/: Makefile  PLIST  depend.mk  distinfo
audio/festival/: Makefile  PLIST  depend.mk  distinfo
audio/festlex-cmu/: Makefile  depend.mk
audio/festlex-poslex/: Makefile  depend.mk
audio/festvox-cmu-us-awb-arctic-hts/: Makefile
audio/ogi-voice-as-diphone/: Makefile  PLIST
audio/speett-genom/: Makefile  PLIST  depend.mk  distinfo
audio/sphinx2/: Makefile  PLIST  depend.mk  distinfo
audio/textos-genom/: Makefile  PLIST  depend.mk  distinfo
bootstrap/: README  bootstrap  robotpkg.conf.example
cross/i386-mingw32/: Makefile  PLIST  depend.mk  distinfo
devel/: Makefile
devel/ament-cmake/: DESCR  Makefile  PLIST  depend.mk  distinfo
devel/ament-cmake-ros/: DESCR  Makefile  PLIST  depend.mk  distinfo
devel/asio/: Makefile  PLIST  depend.mk  distinfo
devel/boost/: Makefile  Makefile.common  PLIST  depend.mk  distinfo
devel/boost-build/: Makefile  PLIST  depend.mk
devel/boost-docs/: Makefile  PLIST  depend.mk
devel/boost-headers/: Makefile  PLIST  depend.mk
devel/boost-jam/: Makefile  depend.mk
devel/boost-libs/: Makefile  PLIST  PLIST.Linux  PLIST.NetBSD  depend.mk
devel/boost-log/: DESCR  Makefile  PLIST  depend.mk  distinfo
devel/boost-log/files/: Makefile.am  configure.ac
devel/boost-numeric-bindings/: Makefile  PLIST  depend.mk  distinfo
devel/catkin/: DESCR  Makefile  PLIST  depend.mk  distinfo
devel/cortex-sdk/: Makefile  depend.mk
devel/evart-sdk/: DESCR  Makefile  PLIST  depend.mk  distinfo
devel/foonathan-memory/: DESCR  Makefile  PLIST  depend.mk  distinfo
devel/gbx-flexiport/: Makefile  depend.mk
devel/gbx-share/: Makefile  depend.mk
devel/hpp-corbaserver/: Makefile  PLIST  depend.mk  distinfo  options.mk
devel/hpp-kwsio/: Makefile  PLIST  depend.mk  distinfo
devel/hpp-kwsplus/: Makefile  PLIST  depend.mk  distinfo
devel/hpp-model/: Makefile  PLIST  depend.mk  distinfo  options.mk
devel/hpp-template-corba/: Makefile  PLIST  depend.mk  distinfo
devel/hpp-util/: DESCR  Makefile  PLIST  depend.mk  distinfo
devel/jafar-kernel/: DESCR  Makefile  PLIST  depend.mk  distinfo
devel/jena/: Makefile  PLIST
devel/jrl-cmakemodules/: DESCR  Makefile.common
devel/jrl-modelloader/: Makefile  PLIST  depend.mk  distinfo
devel/jsoncpp/: DESCR  Makefile  PLIST  depend.mk  distinfo
devel/jsoncpp/files/: Makefile.am  configure.ac
devel/libedit/: Makefile  PLIST  depend.mk  distinfo
devel/libjyarp/: Makefile  PLIST  depend.mk  distinfo
devel/libpyyarp/: Makefile  depend.mk  distinfo  log
devel/libtorch-laas/: Makefile  distinfo
devel/log4cxx/: DESCR  Makefile  (+3 more)
devel/tinyxml/files/: CMakeLists.txt
doc/: Makefile
editors/: Makefile
graphics/: Makefile
graphics/vcglib/files/: CMakeLists.txt
hardware/: Makefile
image/: Makefile
interfaces/: Makefile
knowledge/: Makefile
lang/: Makefile
licenses/: aldebaran-license  bsl  cnrs-hpp-closed-source  cpl  java3d-license  kuka-license  mesa-imaging-license  oracle-java-license  pqp-license  primesense-license  qpl  sahand-license  uni-bonn-research-license
localization/: Makefile
manipulation/: Makefile
mapping/: Makefile
math/: Makefile
math/lapack/files/: CMakeLists.txt  lapack-config-version.cmake
meta-pkgs/: Makefile
middleware/: Makefile
mk/: clean.mk  metadata.mk  robotpkg.default.conf  robotpkg.mk  robotpkg.options.mk  robotpkg.prefs.mk  robotpkg.subdir.mk  robotpkg.use.mk
motion/: Makefile
net/: Makefile
optimization/: Makefile
path/: Makefile
pkgtools/: Makefile
robots/: Makefile
scripts/: Makefile
simulation/: Makefile
speech/: Makefile
supervision/: Makefile
sysutils/: Makefile
(+4104 files in other folders)
