# This file is in the public domain
#
AC_PREREQ(2.59)
AC_INIT([@PKGNAME_NOREV@],[@PKGVERSION@])
AM_INIT_AUTOMAKE([foreign no-define])

AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_ARG_VAR(BOOST_LIBS, [boost libraries installation directory])
AC_ARG_VAR(BOOST_HEADERS, [boost headers installation directory])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
